--- a/dojo_survey_app/templates/index.html
+++ b/dojo_survey_app/templates/index.html
@@ -7,45 +7,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Dojo Survey</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
-
-    <form action='/survey_info' method='post'>
+    
+    <form action='/survey_info' method='post' class="mb-3">
         {% csrf_token %}
-        <div class="mb-3">
-            <!-- Name and Email -->
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" name="name">
-            <label for="email" class="form-label">Email Address</label>
-            <input type="email" class="form-control" id="email" placeholder="name@Dojo.com" name="email">
+        <!-- Name and Email -->
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" name="name">
+        <label for="email" class="form-label">Email Address</label>
+        <input type="email" class="form-control" id="email" placeholder="name@Dojo.com" name="email">
 
-            <!-- Dojo Location -->
-            <label for="location" class="form-label">Dojo Location</label>
-            <select class="form-select" id="location" aria-label="Default select example" name="location">
-                <option selected>Location</option>
-                <option value="san jose">San Jose</option>
-                <option value="dallas">Dallas</option>
-                <option value="online">Online</option>
-            </select>
+        <!-- Dojo Location -->
+        <label for="location" class="form-label">Dojo Location</label>
+        <select class="form-select" id="location" aria-label="Default select example" name="location">
+            <option selected>Location</option>
+            <option value="san jose">San Jose</option>
+            <option value="dallas">Dallas</option>
+            <option value="online">Online</option>
+        </select>
 
-            <!-- Favorite Language -->
-            <label for="favorite_language" class="form-label">Favorite Language</label>
-            <select class="form-select" id="favorite_language" aria-label="Default select example"
-                name="favorite_language">
-                <option selected>Select a language</option>
-                <option value="python">Python</option>
-                <option value="java">Java</option>
-                <option value="js">JavaScript</option>
-            </select>
+        <!-- Favorite Language -->
+        <label for="favorite_language" class="form-label">Favorite Language</label>
+        <select class="form-select" id="favorite_language" aria-label="Default select example" name="favorite_language">
+            <option selected>Select a language</option>
+            <option value="python">Python</option>
+            <option value="java">Java</option>
+            <option value="js">JavaScript</option>
+        </select>
 
-            <!-- Comment -->
-            <label for="comment" class=" form-label">Comment (optional)</label>
-            <input type="text" class="form-control" id="comment" name="comment">
+        <!-- Comment -->
+        <label for="comment" class=" form-label">Comment (optional)</label>
+        <input type="text" class="form-control" id="comment" name="comment">
 
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Submit Survey</button>
-        </div>
+        <!-- Submit Button -->
+        <button type="submit" id="submit" class="btn btn-primary">Submit Survey</button>
     </form>
 
 </body>
