Need to learn abou sessions to complete dojo survey

--- a/dojo_survey_app/templates/index.html
+++ b/dojo_survey_app/templates/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    
-    <form action='/survey_info' method='post' class="mb-3">
+
+    <form action='/survey_data' method='post' class="mb-3">
         {% csrf_token %}
         <!-- Name and Email -->
         <label for="name" class="form-label">Name</label>
