Added sessions so I can save the data before it redirects to another page

--- a/dojo_survey_app/templates/index.html
+++ b/dojo_survey_app/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <form action='/result' method='post' class="mb-3">
+    <form action='/survey_data' method='post' class="mb-3">
         {% csrf_token %}
         <!-- Name and Email -->
         <label for="name" class="form-label">Name</label>
